# system

./: .gitignore  Bubble.qml  CMakeLists.txt  CustomButton.qml  LICENSE  Main.qml  NavigationState.qml  book_management.qml  database.cpp  database.h  history_page.qml  main.cpp  manager_page.qml  return_page.qml  search_page.qml  sign_up.qml  user.h  user_management.qml  user_page.qml
